# marcardioid.github.io

./: .gitignore  .gitmodules  .travis.yml  404.html  CNAME  GENERATE DEVELOP.bat  GENERATE PUBLISH.bat  LICENSE  README.md  atom.xml  generate.sh  humans.txt  index.html  keybase.txt  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: deploy_to_ftp.yml  deploy_to_pages.yml
blog/: index.html
blog/2016/: index.html
blog/2016/01/: index.html
blog/2016/01/hello-world-again/: index.html
blog/2016/02/: index.html
blog/2023/: index.html
blog/2023/04/: index.html
blog/2023/04/splash-marc-sleegers/: index.html
blog/archive/: index.html
content/: 23.01.2016 Hello, world! (Again.).md  25.02.2016 Managing Azure Machine Learning endpoints.md  30.01.2016 Taking the 'Daily' out of 'Daily Programmer'.md
content/extra/: humans.txt  robots.txt
content/extra/rpsls/: index.html
content/extra/splash/: index.html
content/pages/: Home.md
plugins/share_post/: share_post.py
plugins/sitemap/: sitemap.py
plugins/sitemap-static/: sitemap.py
sitemap-generator/: sitemap.py
splash/assets/css/: style.css
tag/: about.html  computer.html  developer.html  engineer.html  marc.html  marcardioid.html  programmer.html  science.html  sleegers.html  software.html
theme/: style.min.css
themes/pneumatic/: LICENSE
themes/pneumatic/static/: style.css  style.min.css
themes/pneumatic/templates/: 404.html  archives.html  article.html  base.html  index.html  page.html  period_archives.html
(+5 files in other folders)
