[tool.poetry]
name = "marcsleegers.com"
version = "1.0"
description = "This module contains both the static files and the source files used to generate marcsleegers.com"
authors = ["Marc Sleegers"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
pelican = "3.6.3"
Markdown = "2.6.11"
typogrify = "2.0.7"
webassets = "0.11.1"
beautifulsoup4 = "4.4.0"
cssmin = "0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
